fixing style import

--- a/src/Columns.astro
+++ b/src/Columns.astro
@@ -1,6 +1,6 @@
 ---
 import { getSafeGutter, sizes, uid } from '@chisel-ui/core'
-import './Split.css'
+import './Columns.css'
 import type { StackProps } from '@chisel-ui/stack/astro'
 
 export interface ColumnsProps extends StackProps {
